fix(toggle-button): fixed alignment issues

--- a/src/sass/toggle-button-group/toggle-button-group.scss
+++ b/src/sass/toggle-button-group/toggle-button-group.scss
@@ -91,7 +91,7 @@
 }
 
 .toggle-button-group--list-layout .toggle-button__image-container,
-.toggle-button-group--list-layout .toggle-button__content {
+.toggle-button-group--list-layout .toggle-button__content:not(:only-child) {
     align-self: flex-start;
 }
 
