--- a/src/sass/toggle-button/toggle-button.scss
+++ b/src/sass/toggle-button/toggle-button.scss
@@ -166,7 +166,7 @@
 }
 
 .toggle-button--list-layout .toggle-button__image-container,
-.toggle-button--list-layout .toggle-button__content {
+.toggle-button--list-layout .toggle-button__content:not(:only-child) {
     align-self: self-start;
 }
 
